# orbdot

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: check_version.py  lint.yaml  pull_request_template.md  test.yaml
.github/workflows/workflows/: check_version.py  version.yaml
docs/: requirements.txt
docs/source/: acknowledgements.rst  api.rst  bibliography.rst  citing-orbdot.rst  community_guidelines.rst  conf.py  example_kepler-1658.rst  example_rv_trends.rst  example_wasp-12.rst  getting_started.rst  index.rst  installation.rst  interpreting_your_results.rst  model_fitting.rst  models.rst  references.bib  the_models.rst
examples/: example_hat-p-22.py  example_hat-p-4.py  example_hatp22.py  example_hatp4.py  example_wasp-12.py  example_wasp12.py  general_run.py  quickstart.ipynb
examples/data/: HAT-P-22b_rvs.txt  HAT-P-4b_rvs.txt  WASP-12b_mid_times.txt
examples/data/HAT-P-22/: HAT-P-22b_mid_times.txt  HAT-P-22b_rvs.txt  HAT-P-22b_rvs_full.txt
examples/data/Planet-X/: Planet-Xb_mid_times.txt  Planet-Xb_rvs.txt
examples/info_files/: HAT-P-22_info.json  HAT-P-4_info.json  Planet-X_info.json  WASP-12_info.json
examples/settings_files/: HAT-P-22_settings.json  HAT-P-4_settings.json  Planet-X_settings.json  WASP-12_plot_settings.json  WASP-12_settings.json
joss/: paper.bib  paper.md
orbdot/: __init__.py  __version__.py  analysis.py  joint_fit.py  nested_sampling.py  radial_velocity.py  star_planet.py  transit_duration.py  transit_timing.py
orbdot/defaults/: default_fit_settings.json  default_info_file.json  default_plot_settings.json  default_settings_file.json  fit_settings.json  info_file.json  plot_settings.json
orbdot/models/: orbit.py  rv_models.py  tdv_models.py  theory.py  ttv_models.py
orbdot/tools/: plots.py  priors.py  stats.py  utilities.py
tests/: test_decay.py  test_rv.py
tests/data/: HAT-P-4b_rvs.txt
tests/info_files/: WASP-12_info.json
tests/settings_files/: HAT-P-22_settings.json  HAT-P-4_settings.json  WASP-12_settings.json
