[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-git-versioning",
    "numpy>=2.0.0rc1",
]
build-backend = "setuptools.build_meta"

[project]
name = "orbdot"
description = "A Python package for studying the secular evolution of exoplanet orbits using observational data."
license = {file = "LICENSE"}
maintainers = [
    { name="Simone R. Hagey", email="shagey@phas.ubc.ca" },
]
authors = [
    { name="Simone R. Hagey", email="shagey@phas.ubc.ca" },
    { name="Aaron C. Boley", email="acboley@phas.ubc.ca" },
]
dynamic = ["readme", "version"]
requires-python = ">=3.9"
dependencies = [
    "astropy>=5.1.1",
    "corner>=2.2.1",
    "matplotlib=3.5.0",
    "nestle>=0.2.0",
    "numpy>=1.24",
    "scipy>=1.13",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
"Homepage" = "https://github.com/simonehagey/orbdot"
"Bug Tracker" = "https://github.com/simonehagey/orbdot/issues"
"Documentation" = "https://orbdot.readthedocs.io/en/latest/"

[project.optional-dependencies]
docs = [
    "sphinx>=7.1.2",
    "sphinx_rtd_theme>=2",
    "docutils>=0.18.1",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex",
    "sphinx-autodoc-typehints",
    "numpydoc",
]
test = ["pytest", "pytest-cov"]
multinest = ["pymultinest"]

[tool.setuptools.dynamic]
readme = { file = ["README.rst"], content-type = "text/x-rst" }

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"orbdot" = ["defaults/*.json"]

[tool.ruff]
# Enable:
# pycodestyle ('E')
# pydocstyle ('D')
# pyflakes ('F')
# isort ('I')
# pyupgrade ('UP')
# numpy-specific ('NPY')
# ruff-specific ('RUF')
# flake8-blind-except ('BLE')
# flake8-comprehensions ('C4')
# flake8-return ('RET')
lint.select = ["E", "D", "F", "I", "UP", "NPY", "RUF", "BLE", "C4", "RET"]
lint.ignore = [
    "E501", # E501: line length violations. Enforce these with `black`
    "D203", # D203: 1 blank line required before class docstring
    "D400", # D400: First line should end with a period (only ignoring this because there's another error that catches the same thing)
]
exclude = [
    ".git",
    ".github",
    "build",
    "doc",
    "tests",
]
target-version = "py310"
